--- a/presentation_editor/package.json
+++ b/presentation_editor/package.json
@@ -27,6 +27,7 @@
     "prettier": "3.7.4",
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.1",
+    "stylelint-react-native": "^2.7.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.1",
     "vite": "^7.1.7"
