--- a/presentation_editor/package.json
+++ b/presentation_editor/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write .",
+    "style": "stylelint '**/*.css'"
   },
   "dependencies": {
     "react": "^19.1.1",
