--- a/presentation_editor/package.json
+++ b/presentation_editor/package.json
@@ -8,8 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "format": "prettier --write .",
-    "style": "stylelint '**/*.css'"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "react": "^19.1.1",
